v1.0.0/modules/schema/pages/class/HealthScore.adoc
= `HealthScore`
:toclevels: 4


+++Score that is indicative of the health of one or more assets.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:HealthScore`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/AnalyticScore.adoc[`AnalyticScore`]
*** xref::class/AggregateScore.adoc[`AggregateScore`]
**** *`HealthScore`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
HealthScore {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



RiskScore {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AnalyticScore {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AggregateScore {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Analytic {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AssetGroup {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




HealthScore -> RiskScore: AssetRiskScore


HealthScore -> AnalyticScore: AnalyticScore


HealthScore -> Asset: Asset


HealthScore -> AggregateScore: AssetAggregateScore


HealthScore -> Analytic: Analytic


HealthScore -> AssetGroup: AssetGroup


HealthScore -> DiagramObject: DiagramObjects


HealthScore -> InstanceSet: InstanceSet


HealthScore -> Name: Names


HealthScore -> ChangeSetMember: PropertiesCIMDataObject


HealthScore -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<AnalyticScore,`AnalyticScore`>>
| 1..*
| xref::class/AnalyticScore.adoc[`AnalyticScore`]
| +++Analytic score contributing to this aggregate score.+++

| <<AssetRiskScore,`AssetRiskScore`>>
| 0..1
| xref::class/RiskScore.adoc[`RiskScore`]
| +++Risk score with which this health score is associated.+++

| <<Analytic,`Analytic`>>
| 0..1
| xref::class/Analytic.adoc[`Analytic`]
| +++Analytic which was executed to arrive at this analytic score..+++

| <<Asset,`Asset`>>
| 0..1
| xref::class/Asset.adoc[`Asset`]
| +++Asset to which this analytic score applies.+++

| <<AssetAggregateScore,`AssetAggregateScore`>>
| 0..1
| xref::class/AggregateScore.adoc[`AggregateScore`]
| +++Aggregate score to which this analytic score contributed.+++

| <<AssetGroup,`AssetGroup`>>
| 0..1
| xref::class/AssetGroup.adoc[`AssetGroup`]
| +++Asset group to which this analytic score applies..+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<calculationDateTime,`calculationDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Timestamp of when the score was calculated.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<effectiveDateTime,`effectiveDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date-time for when the score applies.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<value,`value`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Asset health score value.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Analytic]
=== `Analytic`
+++Analytic which was executed to arrive at this analytic score..+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AnalyticScore.Analytic`
| Cardinality
| 0..1
| Type
| xref::class/Analytic.adoc[`Analytic`]

| Inherited from
| xref::class/AnalyticScore.adoc[`AnalyticScore`]


|===

//[discrete]
[#AnalyticScore]
=== `AnalyticScore`
+++Analytic score contributing to this aggregate score.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateScore.AnalyticScore`
| Cardinality
| 1..*
| Type
| xref::class/AnalyticScore.adoc[`AnalyticScore`]

| Inherited from
| xref::class/AggregateScore.adoc[`AggregateScore`]


|===

//[discrete]
[#Asset]
=== `Asset`
+++Asset to which this analytic score applies.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AnalyticScore.Asset`
| Cardinality
| 0..1
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/AnalyticScore.adoc[`AnalyticScore`]


|===

//[discrete]
[#AssetAggregateScore]
=== `AssetAggregateScore`
+++Aggregate score to which this analytic score contributed.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AnalyticScore.AssetAggregateScore`
| Cardinality
| 0..1
| Type
| xref::class/AggregateScore.adoc[`AggregateScore`]

| Inherited from
| xref::class/AnalyticScore.adoc[`AnalyticScore`]


|===

//[discrete]
[#AssetGroup]
=== `AssetGroup`
+++Asset group to which this analytic score applies..+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AnalyticScore.AssetGroup`
| Cardinality
| 0..1
| Type
| xref::class/AssetGroup.adoc[`AssetGroup`]

| Inherited from
| xref::class/AnalyticScore.adoc[`AnalyticScore`]


|===

//[discrete]
[#AssetRiskScore]
=== `AssetRiskScore`
+++Risk score with which this health score is associated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:HealthScore.AssetRiskScore`
| Cardinality
| 0..1
| Type
| xref::class/RiskScore.adoc[`RiskScore`]


|===

//[discrete]
[#calculationDateTime]
=== `calculationDateTime`
+++Timestamp of when the score was calculated.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AnalyticScore.calculationDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/AnalyticScore.adoc[`AnalyticScore`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#effectiveDateTime]
=== `effectiveDateTime`
+++Date-time for when the score applies.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AnalyticScore.effectiveDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/AnalyticScore.adoc[`AnalyticScore`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#value]
=== `value`
+++Asset health score value.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AnalyticScore.value`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/AnalyticScore.adoc[`AnalyticScore`]


|===


