v1.1.0/modules/schema/pages/class/HealthScore.adoc
= `HealthScore`
:toclevels: 4


+++Score that is indicative of the health of one or more assets.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:HealthScore`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/AnalyticScore.adoc[`AnalyticScore`]
*** xref::class/AggregateScore.adoc[`AggregateScore`]
**** *`HealthScore`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<AssetRiskScore,`AssetRiskScore`>>
//| [[slots_table.AssetRiskScore]]<<AssetRiskScore,`AssetRiskScore`>>
| 0..1 +
xref::class/RiskScore.adoc[`RiskScore`]
| +++Risk score with which this health score is associated.+++
| _n/a_

| <<AnalyticScore,`AnalyticScore`>>
//| [[slots_table.AnalyticScore]]<<AnalyticScore,`AnalyticScore`>>
| 1..* +
xref::class/AnalyticScore.adoc[`AnalyticScore`]
| +++Analytic score contributing to this aggregate score.+++
| xref::class/AggregateScore.adoc[`AggregateScore`]

| <<Analytic,`Analytic`>>
//| [[slots_table.Analytic]]<<Analytic,`Analytic`>>
| 0..1 +
xref::class/Analytic.adoc[`Analytic`]
| +++Analytic which was executed to arrive at this analytic score..+++
| xref::class/AnalyticScore.adoc[`AnalyticScore`]

| <<Asset,`Asset`>>
//| [[slots_table.Asset]]<<Asset,`Asset`>>
| 0..1 +
xref::class/Asset.adoc[`Asset`]
| +++Asset to which this analytic score applies.+++
| xref::class/AnalyticScore.adoc[`AnalyticScore`]

| <<AssetAggregateScore,`AssetAggregateScore`>>
//| [[slots_table.AssetAggregateScore]]<<AssetAggregateScore,`AssetAggregateScore`>>
| 0..1 +
xref::class/AggregateScore.adoc[`AggregateScore`]
| +++Aggregate score to which this analytic score contributed.+++
| xref::class/AnalyticScore.adoc[`AnalyticScore`]

| <<AssetGroup,`AssetGroup`>>
//| [[slots_table.AssetGroup]]<<AssetGroup,`AssetGroup`>>
| 0..1 +
xref::class/AssetGroup.adoc[`AssetGroup`]
| +++Asset group to which this analytic score applies..+++
| xref::class/AnalyticScore.adoc[`AnalyticScore`]

| <<calculationDateTime,`calculationDateTime`>>
//| [[slots_table.calculationDateTime]]<<calculationDateTime,`calculationDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Timestamp of when the score was calculated.+++
| xref::class/AnalyticScore.adoc[`AnalyticScore`]

| <<effectiveDateTime,`effectiveDateTime`>>
//| [[slots_table.effectiveDateTime]]<<effectiveDateTime,`effectiveDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date-time for when the score applies.+++
| xref::class/AnalyticScore.adoc[`AnalyticScore`]

| <<value,`value`>>
//| [[slots_table.value]]<<value,`value`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Asset health score value.+++
| xref::class/AnalyticScore.adoc[`AnalyticScore`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Analytic]
=== `Analytic`
+++Analytic which was executed to arrive at this analytic score..+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AnalyticScore.Analytic`
| Cardinality
| 0..1
| Type
| xref::class/Analytic.adoc[`Analytic`]

| Inherited from
| xref::class/AnalyticScore.adoc[`AnalyticScore`]


|===

////
[.text-left]
--
<<slots_table.Analytic,&#10548;>>
--
////


//[discrete]
[#AnalyticScore]
=== `AnalyticScore`
+++Analytic score contributing to this aggregate score.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateScore.AnalyticScore`
| Cardinality
| 1..*
| Type
| xref::class/AnalyticScore.adoc[`AnalyticScore`]

| Inherited from
| xref::class/AggregateScore.adoc[`AggregateScore`]


|===

////
[.text-left]
--
<<slots_table.AnalyticScore,&#10548;>>
--
////


//[discrete]
[#Asset]
=== `Asset`
+++Asset to which this analytic score applies.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AnalyticScore.Asset`
| Cardinality
| 0..1
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/AnalyticScore.adoc[`AnalyticScore`]


|===

////
[.text-left]
--
<<slots_table.Asset,&#10548;>>
--
////


//[discrete]
[#AssetAggregateScore]
=== `AssetAggregateScore`
+++Aggregate score to which this analytic score contributed.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AnalyticScore.AssetAggregateScore`
| Cardinality
| 0..1
| Type
| xref::class/AggregateScore.adoc[`AggregateScore`]

| Inherited from
| xref::class/AnalyticScore.adoc[`AnalyticScore`]


|===

////
[.text-left]
--
<<slots_table.AssetAggregateScore,&#10548;>>
--
////


//[discrete]
[#AssetGroup]
=== `AssetGroup`
+++Asset group to which this analytic score applies..+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AnalyticScore.AssetGroup`
| Cardinality
| 0..1
| Type
| xref::class/AssetGroup.adoc[`AssetGroup`]

| Inherited from
| xref::class/AnalyticScore.adoc[`AnalyticScore`]


|===

////
[.text-left]
--
<<slots_table.AssetGroup,&#10548;>>
--
////


//[discrete]
[#AssetRiskScore]
=== `AssetRiskScore`
+++Risk score with which this health score is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:HealthScore.AssetRiskScore`
| Cardinality
| 0..1
| Type
| xref::class/RiskScore.adoc[`RiskScore`]


|===

////
[.text-left]
--
<<slots_table.AssetRiskScore,&#10548;>>
--
////


//[discrete]
[#calculationDateTime]
=== `calculationDateTime`
+++Timestamp of when the score was calculated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AnalyticScore.calculationDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/AnalyticScore.adoc[`AnalyticScore`]


|===

////
[.text-left]
--
<<slots_table.calculationDateTime,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#effectiveDateTime]
=== `effectiveDateTime`
+++Date-time for when the score applies.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AnalyticScore.effectiveDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/AnalyticScore.adoc[`AnalyticScore`]


|===

////
[.text-left]
--
<<slots_table.effectiveDateTime,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#value]
=== `value`
+++Asset health score value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AnalyticScore.value`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/AnalyticScore.adoc[`AnalyticScore`]


|===

////
[.text-left]
--
<<slots_table.value,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/RiskScore.adoc[`RiskScore`] | xref::class/RiskScore.adoc#AssetHealthScore[`AssetHealthScore`]


|===

